--- a/remove_wordpress.yml
+++ b/remove_wordpress.yml
@@ -2,6 +2,9 @@
 - name: Remove Jboss Components and configuration
   hosts: wordpress-server
   gather_facts: false
+  remote_user: ec2-user
+  become: yes
+  become_method: sudo
 
   tasks:
   - name: Stop php-fpm service
