--- a/wordpress-nginx_rhel7/site.yml
+++ b/wordpress-nginx_rhel7/site.yml
@@ -1,11 +1,9 @@
 ---
 - name: Install WordPress, MariaDB, Nginx, and PHP-FPM
   hosts: wordpress-server
-  remote_user: ec2-user
-  become: yes
-  become_method: sudo
-  # remote_user: user
-  # sudo: yes
+#  remote_user: ec2-user
+#  become: yes
+#  become_method: sudo
 
   roles:
     - common
